k8s/namespace-linuxspec-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linuxspec-prod
  labels:
    policy.sigstore.dev/include: "true"
