k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linuxspec-frontend
  namespace: linuxspec-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linuxspec-frontend
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
      labels:
        app: linuxspec-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: linuxspec-frontend
          image: ghcr.io/xilpanda/linuxspec-frontend:20eb9d4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
