k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linuxspec-backend
spec:
  type: ClusterIP
  selector:
    app: linuxspec-backend
  ports:
    - port: 80
      targetPort: 5000
