k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linuxspec-frontend
  namespace: linuxspec-prod
spec:
  type: ClusterIP
  selector:
    app: linuxspec-frontend
  ports:
    - port: 80
      targetPort: 3000
