k8s/fintech-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linuxspec.com
        - www.linuxspec.com
        - frontend.linuxspec.com
      secretName: linuxspec-web-tls
  rules:
    - host: linuxspec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linuxspec-frontend
                port:
                  number: 80
    - host: www.linuxspec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linuxspec-frontend
                port:
                  number: 80
    - host: frontend.linuxspec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linuxspec-frontend
                port:
                  number: 80
